update height in animation a-footer

--- a/recipe-page/assets/styles/style.css
+++ b/recipe-page/assets/styles/style.css
@@ -190,6 +190,7 @@ footer a:before {
 
 footer a:hover:before {
     width: 50%;
+    height: 1px;
 }
 
 footer a::after {
@@ -205,4 +206,5 @@ footer a::after {
 
 footer a:hover:after {
     width: 50%;
+    height: 1px;
 }
