--- a/social-links-profile/media-queries.css
+++ b/social-links-profile/media-queries.css
@@ -1,9 +1,9 @@
 @media screen and (max-width: 375px) {
-  body {
-    font-family: "Inter";
-  }
+    main {
+        padding: 15px;
+    }
 
-  main {
-    width: 300px;
-  }
+    footer {
+        flex-direction: column;
+    }
 }
