--- a/social-links-profile/assets/styles/style.css
+++ b/social-links-profile/assets/styles/style.css
@@ -127,4 +127,21 @@ footer {
 footer a {
   text-decoration: none;
   color: var(--green);
+  position: relative;
+}
+
+footer a::before {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  content: '';
+  width: 0%;
+  height: 2px;
+  background-color: var(--green);
+  transition: all .4s ease;
+}
+
+footer a:hover::before {
+  width: 100%;
+  height: 1px;
 }
