--- a/5-results-summary-component/styles/style.css
+++ b/5-results-summary-component/styles/style.css
@@ -62,7 +62,7 @@ main {
 
     display: flex;
     justify-content: center;
-    border-radius: 0px 00px 0px 0px;
+    border-radius: 20px;
     box-shadow: 2px 2px 10px 2px var(--pale-blue);
 }
 
@@ -89,7 +89,7 @@ main {
 }
 
 #section-left p {
-    font-size: 18px;
+    font-size: 14px;
     color: rgba(255, 255, 255, 0.718);
 }
 
@@ -123,6 +123,7 @@ main {
     flex-direction: column;
     align-items: center;
     gap: 15px;
+    border-radius: 0px 20px 20px 0px;
 } 
 
 #section-right h3 {
