--- a/5-results-summary-component/styles/style.css
+++ b/5-results-summary-component/styles/style.css
@@ -38,14 +38,9 @@
     box-sizing: border-box;
 }
 
-html {
-    height: 100%;
-    width: 100%;
-}
-
 body {
     padding: 0px 20px 0px 20px;
-    height: 100%;
+    min-height: 100vh;
     width: 100%;
     font-family: 'Hanken Grotesk', Arial, Helvetica, sans-serif;
     background-color: var(--white);
@@ -216,8 +211,28 @@ footer a {
     color: white;
     text-decoration: none;
     font-weight: bold;
+    position: relative;
+    transition: all .3s ease;
+    position: relative;
 }
 
 footer a:hover {
-    text-decoration: underline;
+    color: rgb(0, 213, 255); 
+    text-shadow: 1px rgba(255, 255, 255, 0.54); 
+}
+
+footer a::before {
+    content: '';
+    width: 0;
+    height: 1px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    transition: all .3s ease;
+    background-color: rgb(0, 213, 255);
+}
+
+footer a:hover::before {
+    width: 100%;
+    height: 2px;
 }
