--- a/11-stats-preview-card-component/styles/style.css
+++ b/11-stats-preview-card-component/styles/style.css
@@ -6,8 +6,133 @@
   --very-dark-blue: hsl(233, 47%, 7%);
   --dark-desaturated-blue: hsl(244, 38%, 16%);
   --soft-violet: hsl(277, 64%, 61%);
+  --soft-violet-transparent: hsla(281, 100%, 34%, 0.508);
 
   --white: hsl(0, 0%, 100%);
   --slightly-transparent-white: hsla(0, 0%, 100%, 0.75);
   --slightly-transparent-white: hsla(0, 0%, 100%, 0.6);
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    width: 100%;
+    padding: 5% 10px 0px;
+    min-height: 100vh;
+    background-color: var(--very-dark-blue);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    gap: 30px;
+}
+
+main {
+    max-width: 950px;
+    height: 400px;
+    background-color: var(--dark-desaturated-blue);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+#image {
+    order: 2;
+    width: 50%;
+    height: 100%;
+    background: url(../images/image-header-desktop.jpg) no-repeat center center/cover;
+    background-color: var(--soft-violet-transparent);
+    background-blend-mode: soft-light;
+}
+
+#content {
+    order: 1;
+    width: 50%;
+    padding: 0px 50px;
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+}
+
+#main-title span {
+    color: var(--soft-violet);
+}
+
+#content h1 {
+    font-size: 2.1em;
+    color: var(--white);
+    font-family: 'Inter';
+}
+
+#content p {
+    color: var(--slightly-transparent-white);
+    font-family: 'Lexend Deca', Arial, Helvetica, sans-serif;
+    font-size: 0.9em;
+    line-height: 20px;
+}
+
+#stats-container {
+    display: flex;
+    justify-content: flex-start;
+    gap: 40px;
+    margin-top: 40px;
+}
+
+#stats-container span {
+    color: var(--white);
+    font-size: 1.3em;
+    font-weight: bold;
+    font-family: 'Inter';
+}
+
+#stats-container p {
+    text-transform: uppercase;
+    font-size: 0.7em;
+}
+
+footer {
+    background-color: var(--soft-violet);
+    width: calc(100% + 20px);
+    padding: 10px;
+    text-align: center;
+    color: var(--dark-desaturated-blue);
+    font-family: 'Inter';
+    font-size: 0.9em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+}
+
+footer a {
+    text-decoration: none;
+    color: var(--dark-desaturated-blue);
+    font-weight: bold;
+    transition: all .2s ease;
+    position: relative;
+}
+
+footer a:hover {
+    color: var(--white);
+}
+
+footer a::before {
+    content: '';
+    width: 0;
+    height: 1px;
+    position: absolute;
+    bottom: 0;
+    background-color: var(--white);
+    transition: all .3s ease;
+}
+
+footer a:hover::before {
+    width: 100%;
 }
