--- a/14-faq-accordion-card/styles/style.css
+++ b/14-faq-accordion-card/styles/style.css
@@ -13,6 +13,124 @@
   --light-grayish-blue: hsl(240, 5%, 91%);
 }
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
+    width: 100%;
+    min-height: 100vh;
+    background-image: linear-gradient(to bottom, var(--soft-violet), var(--soft-blue));
     font-family: 'Kumbh Sans';
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.oculta {
+    display: none;
+}
+
+main {
+    background-color: white;
+    box-shadow: 1px 4px 20px var(--very-dark-desaturated-blue);
+    display: flex;
+    max-width: 800px;
+    width: 100%;
+    height: 400px;
+    border-radius: 20px;
+}
+
+#image {
+    width: 50%;
+    height: 100%;
+    position: relative;
+}
+
+#main-image {
+    width: 110%;
+    position: absolute;
+    overflow: hidden;
+}
+
+#main-image {
+    overflow: hidden;
+    position: relative;
+    height: 100%;
+}
+
+#main-image img {
+    width: 100%;
+    position: absolute;
+    left: -60px;
+}
+
+#main {
+    position: absolute;
+    top: 30px;
+    z-index: 2;
+}
+
+#background {
+    z-index: 1;
+    position: absolute;
+    top: -300px !important;
+    left: -500px !important;
+    width: 200% !important;
+}
+
+#box {
+    z-index: 3;
+    position: absolute;
+    width: 150px;
+    top: 165px;
+    left: -73px;
+}
+
+#content {
+    width: 50%;
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    gap: 30px;
+}
+
+#content h1 {
+    color: var(--very-dark-desaturated-blue);
+}
+
+#content section {
+    width: 100%;
+    color: var(--dark-grayish-blue);
+    padding-bottom: 10px;
+    border-bottom: 1px solid var(--light-grayish-blue);
+}
+
+.asks {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.asks img {
+    width: 15px;
+    height: 10px;
+}
+
+.answer {
+    margin-top: 10px;
+}
+
+.icon-up {
+    transform: rotate(180deg);
+}
+
+.open {
+    color: var(--very-dark-desaturated-blue);
 }
